# pynecone-colab-ide

./: README.md  pynecone_term_colabide_pc0_1_28_v002.ipynb  pyproject.toml  release_ide.md
first-tunnel-app/: pcconfig.py
first-tunnel-app/first_tunnel_app/: first_tunnel_app.py
ide-backup/: README.md  ide-pc-0-1-28.py  ide-pc-0-1-29.py  ide-pc-0-1-31.py  ide-rx-0-2-0.py
reflex/: install.sh  keeprun.py  setup_base.sh  tunnelqr.py
utils/: append.py  cellwebapp.py  init.sh  install.sh  keeprun.sh  open-the-tunnel.sh  pcrun.sh  pcrun_background.sh  qrshare.py  setup_base.sh  tunnel.sh
