[build-system]
requires = [
    "setuptools >= 40.0.4",
    "wheel >= 0.29.0",
    "setuptools_scm[toml]>=3.4",
]
build-backend = 'setuptools.build_meta'

[project]
name = "pynecone-colab-ide"
description = "Pynecone colab IDE"
authors = [
    {name = "milochen0418", email = "milo_chen@mail2000.com.tw"},
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 4 - Beta',
    # 'Framework :: Pynecone',
    # 'Framework :: Pynecone :: 0.1',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    # 'Programming Language :: Javascript',
    'Programming Language :: Python',
]
dynamic = ["version", "readme"]
dependencies = [
    'pynecone ~= 0.1.30',
]

[project.urls]
Homepage = "https://github.com/milochen0418/pynecone-colab-ide"

[tool.setuptools]
platforms = ['unix', 'linux', 'osx', 'cygwin', 'win32']

[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.setuptools_scm]